--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.1.4",
+    "@react-three/postprocessing": "^3.0.4",
     "gsap": "^3.13.0",
+    "maath": "^0.10.8",
     "next": "15.3.4",
     "next-intl": "^4.3.1",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.37.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.177.0",
