--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "gsap": "^3.13.0",
     "maath": "^0.10.8",
-    "next": "15.3.4",
+    "next": "^15.3.5",
     "next-intl": "^4.3.1",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.4",
