--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.1.4",
     "@react-three/postprocessing": "^3.0.4",
+    "framer-motion": "^12.23.0",
     "gsap": "^3.13.0",
     "maath": "^0.10.8",
     "next": "^15.3.5",
@@ -20,6 +21,7 @@
     "postprocessing": "^6.37.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "three": "^0.177.0",
     "vanilla-tilt": "^1.8.1"
   },
@@ -29,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-icons": "^2.2.7",
     "@types/three": "^0.177.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
